--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "katex": "^0.16.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/katex": "^0.16.0",
